--- a/widgets/presence/presence.html
+++ b/widgets/presence/presence.html
@@ -7,7 +7,7 @@
         
         <div class="col">
           <figure class="figure">
-            <img data-bind-src="person.location.map_url"/>
+            <img data-bind-src="person.map_url"/>
             <figcaption class="figure-caption text-center"><p data-bind="person.caption"></p></figcaption>
           </figure>
         </div>
@@ -15,22 +15,22 @@
     </ul>
   </div>
   <div data-hideif='occupied'>
-    <h2>Welcome back</h2>
-    <h2 class="text-center">
+    <h3>Welcome back</h3>
+    <h3 class="text-center">
     <i class="fa fa-home" aria-hidden="true"></i>
 
-  </h2>
+  </h3>
   </div>
 </div>
 
 
 <div data-showif='everyone_home'>
-  <h2 class="display-1 text-center">Everyone is home!</h2>
-  <h2 class="text-center">
+  <h3 class="text-center">Everyone is home!</h3>
+  <h3 class="text-center">
     <i class="fa fa-heart" aria-hidden="true"></i>
     <i class="fa fa-heart-o" aria-hidden="true"></i>
     <i class="fa fa-heart" aria-hidden="true"></i>
-  </h2>
+  </h3>
 </div>
 
 <div class="updated-at" data-bind="updatedAtMessage"></div>
